--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Template Post Type: post, page
 				
 			</div>
 
-			<div class="game-mini-result-begin">
+			<div class="game-mini-result-begin btn-1">
 				Start game
 			</div>
 		
